[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sempca"
version = "0.1.0"
description = """SemPCA is an artifact of an empirical study: \
Try with Simpler – An Evaluation of Improved Principle Component Analysis \
in Log-based Anomaly Detection."""
authors = [
    { name = "Lin Yang", email = "linyang@tju.edu.cn" },
    { name = "Ondrej Sedlacek", email = "xsedla1o@stud.fit.vutbr.cz" }
]

[project.scripts]
sempca-loganomaly = "sempca.approaches.LogAnomaly:main"
sempca-deeplog = "sempca.approaches.DeepLog:main"
sempca-logcluster = "sempca.approaches.LogClustering:main"
sempca-logrobust = "sempca.approaches.LogRobust:main"
sempca-pca = "sempca.approaches.PCA:main"
sempca-pca-plus-plus = "sempca.approaches.PCAPlusPlus:main"
sempca-ple-log = "sempca.approaches.PLELog:main"

[tool.setuptools.packages.find]
include = ["sempca*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
